<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_download"
        android:orderInCategory="90"
        android:title="下载"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_today_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_calendar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_today"
                android:title="@string/period_today"/>
            <item
                android:id="@+id/action_this_week"
                android:title="@string/period_last_week"/>
            <item
                android:id="@+id/action_this_month"
                android:title="@string/period_last_month"/>

            <item
                android:id="@+id/action_this_year"
                android:title="@string/period_last_year"/>
            
            <item
                android:id="@+id/action_two_year"
                android:title="@string/period_last_two_year"/>

            <item
                android:id="@+id/action_third_year"
                android:title="@string/period_last_third_year"/>

            <item
                android:id="@+id/action_fourth_year"
                android:title="@string/period_last_fourth_year"/>

            <item
                android:id="@+id/action_fifth_year"
                android:title="@string/period_last_fifth_year"/>

            <item
                android:id="@+id/action_custom_year"
                android:title="@string/period_last_custom_year"/>

        </menu>
    </item>

</menu>
